--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,15 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-console-standalone', version: '1.9.2'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.1'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.1'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 }
